@@ -1,3 +1,8 @@
+Mon Mar 26 22:20:14 UTC 2012  Trevor Fields  <fields_t@ociweb.com>
+
+        * orbsvcs/tests/Notify/Basic/ExtendedFilter.h:
+          Removed unnecessary pointers.
+
 Mon Mar 26 13:11:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>
 
         * tests/ZIOP/client.cpp:
